<resources>
    <string name="app_name" translatable="false">Interview2go</string>
    <string name="title_activity_topic">Interview Topics</string>
    <string name="title_activity_topic_done">Done</string>
    <string name="title_activity_topic_bookmarked">Bookmark</string>
    <string name="title_activity_question">QuestionActivity</string>
    <string name="title_activity_solution">SolutionActivity</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Account type (for sync-adapter authenticator) -->
    <!-- SyncAdapter related -->
    <string name="sync_account_type" translatable="false">interview2go.aggarwalankush.com</string>
    <string name="content_authority" translatable="false">com.aggarwalankush.interview2go.provider</string>

    <!-- Server stuff -->
    <string name="server_base_url" translatable="false">https://raw.githubusercontent.com/aggarwalankush/CodeBlob/master/src</string>
    <string name="server_output_file" translatable="false">Output.json</string>
    <string name="server_light_solution" translatable="false">LightModeHtml</string>
    <string name="server_dark_solution" translatable="false">DarkModeHtml</string>

    <!-- No data available messages -->
    <string name="empty_topic_list">No Data Available</string>
    <string name="empty_question_list">No Questions Available</string>
    <string name="empty_section">No Data Available</string>
    <string name="empty_list_no_network">No Data available. The network is not available to fetch data.</string>

    <!-- Share data -->
    <string name="action_share">Share</string>
    <string name="share_format" translatable="false">Topic : %1$s %nQuestion : %2$s %n---Solution--- %n%3$s %n---Output--- %n%4$s</string>

    <!-- Topic detail -->
    <string name="share_topic_detail" translatable="false">%1$d Questions, %2$d Done, %3$d Bookmarks</string>

    <!-- Topic Progress bar -->
    <string name="progress_title">Downloading questions</string>
    <string name="progress_message">Requires for offline view</string>
    <string name="progress_title_no_network">No Internet Connection</string>
    <string name="progress_message_no_network">Network is required to download questions</string>

    <!-- Strings related to Dark Mode Enabled preference -->
    <string name="pref_enable_darkMode_key" translatable="false">enable_darkMode</string>
    <string name="pref_enable_darkMode_label">Code Editor Dark Mode</string>
    <string name="pref_enable_darkMode_true">Enabled</string>
    <string name="pref_enable_darkMode_false">Not Enabled</string>
    <string name="pref_enable_darkMode_default" translatable="false">false</string>

    <!-- Strings related to Code Font Size preference -->
    <string name="pref_font_label">Code Font size</string>
    <string name="pref_font_label_small">Small</string>
    <string name="pref_font_label_normal">Normal</string>
    <string name="pref_font_label_large">Large</string>
    <string name="pref_font_key" translatable="false">font</string>
    <string name="pref_font_small" translatable="false">small</string>
    <string name="pref_font_normal" translatable="false">normal</string>
    <string name="pref_font_large" translatable="false">large</string>

    <string name="forward_content_desc">forward icon</string>

    <!--Navigation drawer strings for content description-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- menu labels -->
    <string name="label_menu_home">Home</string>
    <string name="label_menu_done">Done</string>
    <string name="label_menu_bookmark">Bookmark</string>
    <string name="label_menu_reset">Reset</string>
    <string name="label_menu_settings">Settings</string>
    <string name="label_menu_rate_app">Rate App</string>
    <string name="label_menu_overview">Overview</string>

    <!-- Rate app -->
    <string name="rate_app_title">Rate our App</string>
    <string name="rate_app_message">If you like our app, please take a moment to rate it in play store!</string>
    <string name="dialog_app_rate">Rate App</string>
    <string name="dialog_ask_later">Later</string>
    <string name="dialog_your_feedback">Give Feedback</string>

    <!-- activity type shared preference -->
    <string name="activity_type_shared_preference">activityTypeSP</string>
    <string name="activity_type_key">activity_type</string>

    <!-- Reset alert -->
    <string name="reset_alert_title">Undo Done and Bookmarks</string>
    <string name="reset_alert_message">Are you sure you want to reset all questions?</string>
    <string name="reset_alert_positive_label">Reset</string>
    <string name="reset_alert_negative_label">Cancel</string>

    <!-- empty topic lists messages -->
    <string name="done_empty_message">Nothing in Done</string>
    <string name="bookmark_empty_message">Nothing in Bookmark</string>
    <string name="home_empty_message">All questions done or bookmarked</string>

    <!-- overview labels -->
    <string name="overview_total_label">Total Questions</string>
    <string name="overview_done_label">Done</string>
    <string name="overview_bookmark_label">Bookmark</string>
    <string name="overview_total_questions">100</string>

    <!-- search strings -->
    <string name="search_hint">Search Question</string>
    <string name="action_search">Search</string>
    <string name="settings_description">Questions</string>



</resources>
