<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/menu_group_1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/label_menu_home"
            />
        <item
            android:id="@+id/nav_bookmark"
            android:icon="@drawable/ic_menu_bookmark"
            android:title="@string/label_menu_bookmark"/>
        <item
            android:id="@+id/nav_done"
            android:icon="@drawable/ic_menu_done"
            android:title="@string/label_menu_done"/>
    </group>

    <group android:id="@+id/menu_group_2">
        <item
            android:id="@+id/nav_reset"
            android:icon="@drawable/ic_reset"
            android:title="@string/label_menu_reset"/>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/label_menu_settings"/>
    </group>

    <group android:id="@+id/menu_group_3">
        <item
            android:id="@+id/nav_rate_app"
            android:icon="@drawable/ic_menu_rate"
            android:title="@string/label_menu_rate_app"/>
    </group>

</menu>
